Esqueleto del diseño y fuentes tipográficas

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta author="Marco Saracco">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" src="styles.css">
+    <link type="text/css" href="styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/picture.svg" type="img/svg">
+    <link rel="stylesheet" href="fonts.css" type="text/css">
+    <link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin>
     <title>Canvas</title>
 </head>
 <body>
-    
+    <h1>¡Dibuja <br>canvas!</h1>
+    <canvas id="dibujo" width="500" height="500"></canvas>
 </body>
 </html>
