El programa es capaz de reconocer las flechas de teclado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <title>Canvas</title>
 </head>
 <body>
-    <h1>¡Dibuja <br>canvas!</h1>
-    <canvas id="dibujo" width="500" height="500"></canvas>
+    <h1>¡Dibuja<br>Canvas!</h1>
+    <canvas id="área_de_dibujo" width="500" height="500"></canvas>
+
+    <script src="events.js"></script>
+
 </body>
 </html>
