--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+
     <meta charset="UTF-8">
     <meta author="Marco Saracco">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" href="styles.css" rel="stylesheet">
+    <meta name="viewport"     content="width=device-width, initial-scale=1.0">
+    
     <link rel="shortcut icon" href="assets/picture.svg" type="img/svg">
-    <link rel="stylesheet" href="fonts.css" type="text/css">
-    <link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin>
+    <link rel="stylesheet"    href="styles.css"         type="text/css">
+    <link rel="stylesheet"    href="fonts.css"          type="text/css">
+    <link rel="preconnect"    href="https://api.fonts.coollabs.io" crossorigin>
+    
     <title>Canvas</title>
+
 </head>
 <body>
+
     <h1>¡Dibuja<br>Canvas!</h1>
     <canvas id="área_de_dibujo" width="500" height="500"></canvas>
-
     <script src="events.js"></script>
 
 </body>
