LTipografía Inter importada y soporte para WASD

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"     content="width=device-width, initial-scale=1.0">
     
+    <link rel="preconnect"    href="https://api.fonts.coollabs.io" crossorigin>
     <link rel="shortcut icon" href="assets/picture.svg" type="img/svg">
     <link rel="stylesheet"    href="styles.css"         type="text/css">
     <link rel="stylesheet"    href="fonts.css"          type="text/css">
-    <link rel="preconnect"    href="https://api.fonts.coollabs.io" crossorigin>
     
-    <title>Canvas</title>
+    <title>Canvas!</title>
 
 </head>
 <body>
 
-    <h1>¡Dibuja<br>Canvas!</h1>
+    <h1>Canvas!</h1>
     <canvas id="área_de_dibujo" width="500" height="500"></canvas>
     <script src="events.js"></script>
 
