Mejora de interfaz y legibilid de codigo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Canvas!</h1>
     <canvas id="área_de_dibujo" width="500"  height="500"></canvas><br>
     
-    <span  id="eraser_input" class="button"><img src="assets/robot.svg"></span>  <!--  -->
+    <span  id="eraser_input" class="button"><img src="assets/robot.svg"></span>
     <span  id="green_input" class="button"></span>   <!-- 🟢 -->
     <span  id="purple_input" class="button"></span>  <!-- 🟣 -->
     <span  id="white_input" class="button"></span>   <!-- ⚪ -->
@@ -27,6 +27,7 @@
     <span class="thick_range">
         <input  id="thick_input"    type="range" oninput="changeThick(this.value);" min="4" max="25">
     </span>
+
         <!--
     <div class="arrowbox-container">
         <span id="arrowUp" class="arrow-box">
