Botón 🟥 agregado y redistribución de espacios

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <canvas id="área_de_dibujo" width="500"  height="500"></canvas><br>
     
     <span  id="eraser_input" class="button"><img src="assets/robot.svg"></span>
+    <span  id="red_input" class="button"></span>     <!-- 🔴 -->
     <span  id="green_input" class="button"></span>   <!-- 🟢 -->
     <span  id="purple_input" class="button"></span>  <!-- 🟣 -->
     <span  id="white_input" class="button"></span>   <!-- ⚪ -->
